--- a/.github/workflows/magic.yml
+++ b/.github/workflows/magic.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Download and Add CSV
         run: |
-          cd /github/workspace/data
+          cd /data
           mv data/lahman.csv "data/lahman_$(date +%Y-%m-%d).csv"
           curl -O http://seanlahman.com/files/database/lahman-csv_2014-02-14.zip
           unzip lahman-csv_2014-02-14.zip
