--- a/.github/workflows/magic.yml
+++ b/.github/workflows/magic.yml
@@ -1,49 +1,23 @@
-name: Run Analysis
+name: Run baseball analysis
 
 on:
-  push:
   schedule:
-    - cron: "0 8 * * *"
+    - cron: '0 8 * * *'
   workflow_dispatch:
 
 jobs:
-  download-data:
+  run:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: Download and Add CSV
-        run: |
-          cd /data
-          mv data/lahman.csv "data/lahman_$(date +%Y-%m-%d).csv"
-          curl -O http://seanlahman.com/files/database/lahman-csv_2014-02-14.zip
-          unzip lahman-csv_2014-02-14.zip
-          mv lahman-csv_2014-02-14/Master.csv data/lahman.csv
-          git add data/lahman.csv
-          git commit -m "Add Lahman consolidated data file"
-          git push
-
-  run-analysis:
-    runs-on: ubuntu-latest
-    needs: download-data
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: Set up Python 3
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.x
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Test data load
-        run: python tests/test_data_load.py
-      - name: Test model
-        run: python tests/test_model.py
-      - name: Test DraftKings pricing
-        run: python tests/test_dk.py
-      - name: Test FanDuel pricing
-        run: python tests/test_fd.py
-      - name: Run model
-        run: python models/lahman_model.py
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Run analysis
+      run: |
+        python run_analysis.py
