--- a/.github/workflows/magic.yml
+++ b/.github/workflows/magic.yml
@@ -21,6 +21,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pandas scikit-learn ortools
+        pip install -r requirements.txt
+        pip install openai  # Add this line to install the openai package
 
     - name: Generate lineups
       run: |
