--- a/.github/workflows/magic.yml
+++ b/.github/workflows/magic.yml
@@ -1,29 +1,31 @@
-name: Generate Lineups
+name: Run Python Script
 
 on:
+  push:
+    branches:
+      - main
   schedule:
-    - cron: '0 12 * * *' # Run every day at 12pm UTC
-  workflow_dispatch: # Triggered manually
+    - cron: '0 0 * * *'  # Runs every day at midnight
 
 jobs:
-  generate-lineups:
+  run_script:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
+    - name: Check out repository
       uses: actions/checkout@v2
 
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.9'
+        python-version: 3.8
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pandas scikit-learn ortools
-        pip install -r requirements.txt
-        pip install openai  # Add this line to install the openai package
+        pip install openai pandas numpy ortools scikit-learn joblib
 
-    - name: Generate lineups
+    - name: Run script
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
         python main.py
