--- a/.github/workflows/magic.yml
+++ b/.github/workflows/magic.yml
@@ -19,10 +19,11 @@ jobs:
       with:
         python-version: 3.8
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install openai pandas numpy ortools scikit-learn joblib
+		- name: Install dependencies
+  		run: |
+    		python -m pip install --upgrade pip
+    		pip install openai pandas numpy ortools scikit-learn joblib lxml html5lib beautifulsoup4 requests
+
 
     - name: Run script
       env:
