--- a/.github/workflows/magic.yml
+++ b/.github/workflows/magic.yml
@@ -18,9 +18,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-		
-		- name: Install dependencies
-			run: |
+
+    - name: Install Dependencies
+      run: |
 				python -m pip install --upgrade pip
 				pip install openai pandas numpy ortools scikit-learn joblib lxml html5lib beautifulsoup4 requests
 
