--- a/.github/workflows/magic.yml
+++ b/.github/workflows/magic.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install openai pandas numpy ortools scikit-learn joblib lxml html5lib beautifulsoup4 requests
+        pip install openai requests pandas numpy ortools scikit-learn joblib lxml html5lib beautifulsoup4 requests
 
     - name: Run script
       env:
